--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -1,97 +1,133 @@
  .u-section-1 {
   background-image: url("https://cdn.jsdelivr.net/gh/Candjao/Sociologia-Prof@main/Background.jpg");
   background-position: 50% 50%;
+  min-height: 756px;
 }
 
-.u-section-1 .u-sheet-1 {
-  min-height: 501px;
-}
-
-.u-section-1 .u-layout-wrap-1 {
-  margin-top: 0;
+.u-section-1 .u-list-1 {
+  grid-template-rows: auto;
+  margin-top: 16px;
   margin-bottom: 0;
 }
 
-.u-section-1 .u-layout-cell-1 {
-  min-height: 501px;
+.u-section-1 .u-repeater-1 {
+  grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  grid-gap: 10px 10px;
+  min-height: 645px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 27px 30px;
+  padding: 0 21px;
 }
 
 .u-section-1 .u-image-1 {
-  width: 321px;
-  height: 321px;
-  background-image: url("https://cdn.jsdelivr.net/gh/Candjao/Hist-ria@main/Jairton.png");
+  width: 313px;
+  height: 313px;
+  background-image: url("https://cdn.jsdelivr.net/gh/Candjao/Qui@main/Xando.png");
   background-position: 50% 50%;
-  margin: 26px auto 0;
-}
-
-.u-section-1 .u-text-1 {
   margin: 30px auto 0;
 }
 
-.u-section-1 .u-layout-cell-2 {
-  min-height: 622px;
-}
-
-.u-section-1 .u-container-layout-2 {
-  padding: 30px 0;
+.u-section-1 .u-text-1 {
+  width: 222px;
+  margin: 16px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.125rem;
-  margin: 0 30px;
+  margin: 16px 9px 0;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 0 21px;
 }
 
 .u-section-1 .u-image-2 {
-  width: 93px;
-  height: 93px;
-  margin: 30px 0 0 auto;
+  width: 313px;
+  height: 313px;
+  background-image: url("https://cdn.jsdelivr.net/gh/Candjao/Qui@main/Edvonaldo.png");
+  background-position: 50% 50%;
+  margin: 30px auto 0;
+}
+
+.u-section-1 .u-text-3 {
+  width: 222px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-text-4 {
+  margin: 16px 9px 0;
+}
+
+.u-section-1 .u-image-3 {
+  width: 100px;
+  height: 100px;
+  margin: -14px calc(((100% - 1140px) / 2)) 9px auto;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 26px;
+   .u-section-1 {
+    min-height: 623px;
   }
 
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 413px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 300px;
-    height: 300px;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 513px;
+  .u-section-1 .u-repeater-1 {
+    min-height: 377px;
   }
 
   .u-section-1 .u-text-2 {
+    margin-left: 0;
     margin-right: 0;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-right: calc(((100% - 940px) / 2));
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
+   .u-section-1 {
+    min-height: 477px;
   }
 
-  .u-section-1 .u-image-1 {
-    width: 216px;
-    height: 216px;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 100px;
+  .u-section-1 .u-image-3 {
+    margin-right: calc(((100% - 720px) / 2));
   }
 }
 
 @media (max-width: 767px) {
+   .u-section-1 {
+    min-height: 358px;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    grid-template-columns: 100%;
+  }
+
   .u-section-1 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-right: calc(((100% - 540px) / 2));
+  }
+}
+
+@media (max-width: 575px) {
+   .u-section-1 {
+    min-height: 225px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-right: calc(((100% - 340px) / 2));
   }
 }
